Fixed alignment of card and grouped search bar and submission button

--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,11 @@
 .card {
     flex: 0 0 auto; /*makes sure cards don't change size*/
     width: 18rem; /* gives cards constant width */
-    display: inline-block; /* makes cards line up beside one another */
     margin: 10px; /* adds space between cards */
 }
 
 .container {
     display: flex;
+    flex-wrap: wrap; /*if not enough space, cards will go to next line*/
     justify-content: center; /* Center items horizontally */
 }
